--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bulma": "^0.3.1",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
